// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckboxGroup /> snapshot should render the same 1`] = `
"Snapshot Diff:
 - Expected
+ Received

  <div
    className=\\"FieldGroup-sc-18uoi37-0 CheckboxGroup__Group-sc-1da60j6-0 brfAPx\\"
  >
    <div
      className=\\"Checkbox__Wrapper-sc-1ca5whm-0 lhYXdT\\"
    >
      <div
        className=\\"Checkbox__CheckboxWrapper-sc-1ca5whm-1 hHJVhY\\"
      >
        <input
          checked={false}
          className=\\"HiddenInput-sc-14w753s-0 Checkbox__HiddenCheckbox-sc-1ca5whm-4 fQyIFG\\"
          disabled={false}
          id=\\"\\"
          name=\\"Foo\\"
          onChange={[Function anonymous]}
          type=\\"checkbox\\"
          value=\\"\\"
        />
        <span
          aria-hidden=\\"true\\"
          className=\\"material-icons MuiIcon-root-1 Checkbox__CheckIcon-sc-1ca5whm-3 cYUJOR\\"
          style={
            Object {
              \\"color\\": \\"\\",
            }
          }
        >
          check
        </span>
        <label
          className=\\"Label-sc-1ny5bqy-0 Checkbox__CheckboxLabel-sc-1ca5whm-2 jGRlMX\\"
          htmlFor=\\"\\"
        >
-         Foo label
+         Foo
        </label>
      </div>
    </div>
    <div
      className=\\"Checkbox__Wrapper-sc-1ca5whm-0 lhYXdT\\"
    >
      <div
        className=\\"Checkbox__CheckboxWrapper-sc-1ca5whm-1 hHJVhY\\"
      >
        <input
          checked={false}
          className=\\"HiddenInput-sc-14w753s-0 Checkbox__HiddenCheckbox-sc-1ca5whm-4 fQyIFG\\"
          disabled={false}
          id=\\"\\"
          name=\\"Bar\\"
          onChange={[Function anonymous]}
          type=\\"checkbox\\"
          value=\\"\\"
        />
        <span
          aria-hidden=\\"true\\"
          className=\\"material-icons MuiIcon-root-1 Checkbox__CheckIcon-sc-1ca5whm-3 cYUJOR\\"
          style={
            Object {
              \\"color\\": \\"\\",
            }
          }
        >
          check
        </span>
        <label
          className=\\"Label-sc-1ny5bqy-0 Checkbox__CheckboxLabel-sc-1ca5whm-2 jGRlMX\\"
          htmlFor=\\"\\"
        >
-         Bar label
+         Bar
        </label>
      </div>
    </div>
    <div
      className=\\"Checkbox__Wrapper-sc-1ca5whm-0 lhYXdT\\"
    >
      <div
        className=\\"Checkbox__CheckboxWrapper-sc-1ca5whm-1 hHJVhY\\"
      >
        <input
          checked={false}
          className=\\"HiddenInput-sc-14w753s-0 Checkbox__HiddenCheckbox-sc-1ca5whm-4 fQyIFG\\"
          disabled={false}
          id=\\"\\"
          name=\\"Baz\\"
          onChange={[Function anonymous]}
          type=\\"checkbox\\"
          value=\\"\\"
        />
        <span
          aria-hidden=\\"true\\"
          className=\\"material-icons MuiIcon-root-1 Checkbox__CheckIcon-sc-1ca5whm-3 cYUJOR\\"
          style={
            Object {
              \\"color\\": \\"\\",
            }
          }
        >
          check
        </span>
        <label
          className=\\"Label-sc-1ny5bqy-0 Checkbox__CheckboxLabel-sc-1ca5whm-2 jGRlMX\\"
          htmlFor=\\"\\"
        >
-         Baz label
+         Baz
        </label>
      </div>
    </div>
  </div>"
`;

exports[`<CheckboxGroup /> snapshot should render the same, when using buttons 1`] = `
"Snapshot Diff:
 - Expected
+ Received

  <div
    className=\\"FieldGroup-sc-18uoi37-0 CheckboxGroup__Group-sc-1da60j6-0 brfAPx\\"
  >
    <div
      className=\\"CheckboxButton__Wrapper-sc-1rvg70v-3 fyNEyf\\"
    >
      <input
        checked={false}
        className=\\"HiddenInput-sc-14w753s-0 CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 kcaPAK\\"
        disabled={false}
-       id=\\"checkbox-button-12\\"
+       id=\\"checkbox-button-15\\"
        name=\\"Foo\\"
        onChange={[Function anonymous]}
        type=\\"checkbox\\"
        value=\\"\\"
      />
      <label
        checked={false}
        className=\\"Label-sc-1ny5bqy-0 ButtonGroupLabel-c89ie7-0 XDOfc\\"
        disabled={false}
-       htmlFor=\\"checkbox-button-12\\"
+       htmlFor=\\"checkbox-button-15\\"
      >
-       Foo label
+       Foo
      </label>
    </div>
    <div
      className=\\"CheckboxButton__Wrapper-sc-1rvg70v-3 fyNEyf\\"
    >
      <input
        checked={false}
        className=\\"HiddenInput-sc-14w753s-0 CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 kcaPAK\\"
        disabled={false}
-       id=\\"checkbox-button-13\\"
+       id=\\"checkbox-button-16\\"
        name=\\"Bar\\"
        onChange={[Function anonymous]}
        type=\\"checkbox\\"
        value=\\"\\"
      />
      <label
        checked={false}
        className=\\"Label-sc-1ny5bqy-0 ButtonGroupLabel-c89ie7-0 XDOfc\\"
        disabled={false}
-       htmlFor=\\"checkbox-button-13\\"
+       htmlFor=\\"checkbox-button-16\\"
      >
-       Bar label
+       Bar
      </label>
    </div>
    <div
      className=\\"CheckboxButton__Wrapper-sc-1rvg70v-3 fyNEyf\\"
    >
      <input
        checked={false}
        className=\\"HiddenInput-sc-14w753s-0 CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 kcaPAK\\"
        disabled={false}
-       id=\\"checkbox-button-14\\"
+       id=\\"checkbox-button-17\\"
        name=\\"Baz\\"
        onChange={[Function anonymous]}
        type=\\"checkbox\\"
        value=\\"\\"
      />
      <label
        checked={false}
        className=\\"Label-sc-1ny5bqy-0 ButtonGroupLabel-c89ie7-0 XDOfc\\"
        disabled={false}
-       htmlFor=\\"checkbox-button-14\\"
+       htmlFor=\\"checkbox-button-17\\"
      >
-       Baz label
+       Baz
      </label>
    </div>
  </div>"
`;

exports[`<CheckboxGroup /> snapshot simple with <CheckboxGroup.Button /> 1`] = `
.c4 {
  display: block;
  margin-bottom: 5px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16px;
  font-weight: bold;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 16px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #FFFFFF;
  border: 1.5px solid #1355d0;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #1355d0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4 *:nth-child(2) {
  margin-left: 5px;
}

.c5:focus ~ .c3 {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c5:hover ~ .c3 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c5:active ~ .c3 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2:focus ~ .c3 {
  box-shadow: 0 2px 4px 0 rgba(19,85,208,0.5);
  background-color: #FFFFFF;
  border-color: #1355d0;
  color: #1355d0;
}

.c2:hover ~ .c3 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c2:active ~ .c3 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c1 .c6 {
  font-size: 17px;
  margin-left: 8px;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <input
      checked={false}
      className="c2"
      disabled={false}
      id="checkbox-button-3"
      name="Foo"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <label
      checked={false}
      className="c3 c4"
      disabled={false}
      htmlFor="checkbox-button-3"
    >
      Foo
    </label>
  </div>
  <div
    className="c1"
  >
    <input
      checked={false}
      className="c2"
      disabled={false}
      id="checkbox-button-4"
      name="Bar"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <label
      checked={false}
      className="c3 c4"
      disabled={false}
      htmlFor="checkbox-button-4"
    >
      Bar
    </label>
  </div>
  <div
    className="c1"
  >
    <input
      checked={false}
      className="c2"
      disabled={false}
      id="checkbox-button-5"
      name="Baz"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <label
      checked={false}
      className="c3 c4"
      disabled={false}
      htmlFor="checkbox-button-5"
    >
      Baz
    </label>
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot simple with <CheckboxGroup.Checkbox /> 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c5 {
  display: block;
  margin-bottom: 5px;
  color: #4c4c4c;
  font-size: 16px;
  margin: 0 0 0 10px;
}

.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2:focus ~ .c6 {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c2:hover ~ .c6 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c2:active ~ .c6 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c2 + .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 2px;
  border: 2px solid #999999;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16px;
  font-weight: bold;
  height: 18px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 2px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 18px;
}

.c2:checked + .c3 {
  background-color: #1355d0;
  border-width: 0;
  color: #FFFFFF;
}

.c2:hover + .c3,
.c2:focus + .c3 {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c2[disabled] {
  cursor: not-allowed;
}

.c2[disabled] ~ .c4 {
  color: #999999;
}

.c2[disabled] + .c3 {
  border-color: #999999;
  background-color: #cccccc;
}

.c2[disabled]:checked + .c3 {
  background-color: #999999;
}

.c2[disabled]:hover + .c3 {
  box-shadow: none;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="c0"
>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="c2"
        disabled={false}
        id=""
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        check
      </span>
      <label
        className="c4 c5"
        htmlFor=""
      >
        Foo
      </label>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="c2"
        disabled={false}
        id=""
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        check
      </span>
      <label
        className="c4 c5"
        htmlFor=""
      >
        Bar
      </label>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="c2"
        disabled={false}
        id=""
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        check
      </span>
      <label
        className="c4 c5"
        htmlFor=""
      >
        Baz
      </label>
    </div>
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot simple with options 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c5 {
  display: block;
  margin-bottom: 5px;
  color: #4c4c4c;
  font-size: 16px;
  margin: 0 0 0 10px;
}

.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2:focus ~ .c6 {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c2:hover ~ .c6 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c2:active ~ .c6 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c2 + .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 2px;
  border: 2px solid #999999;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16px;
  font-weight: bold;
  height: 18px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 2px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 18px;
}

.c2:checked + .c3 {
  background-color: #1355d0;
  border-width: 0;
  color: #FFFFFF;
}

.c2:hover + .c3,
.c2:focus + .c3 {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c2[disabled] {
  cursor: not-allowed;
}

.c2[disabled] ~ .c4 {
  color: #999999;
}

.c2[disabled] + .c3 {
  border-color: #999999;
  background-color: #cccccc;
}

.c2[disabled]:checked + .c3 {
  background-color: #999999;
}

.c2[disabled]:hover + .c3 {
  box-shadow: none;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="c0"
>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="c2"
        disabled={false}
        id=""
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        check
      </span>
      <label
        className="c4 c5"
        htmlFor=""
      >
        Foo
      </label>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="c2"
        disabled={false}
        id=""
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        check
      </span>
      <label
        className="c4 c5"
        htmlFor=""
      >
        Bar
      </label>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="c2"
        disabled={false}
        id=""
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        check
      </span>
      <label
        className="c4 c5"
        htmlFor=""
      >
        Baz
      </label>
    </div>
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot simple with options and type prop as "button" 1`] = `
.c4 {
  display: block;
  margin-bottom: 5px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16px;
  font-weight: bold;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 16px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #FFFFFF;
  border: 1.5px solid #1355d0;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #1355d0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4 *:nth-child(2) {
  margin-left: 5px;
}

.c5:focus ~ .c3 {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c5:hover ~ .c3 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c5:active ~ .c3 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2:focus ~ .c3 {
  box-shadow: 0 2px 4px 0 rgba(19,85,208,0.5);
  background-color: #FFFFFF;
  border-color: #1355d0;
  color: #1355d0;
}

.c2:hover ~ .c3 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c2:active ~ .c3 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c1 .c6 {
  font-size: 17px;
  margin-left: 8px;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <input
      checked={false}
      className="c2"
      disabled={false}
      id="checkbox-button-0"
      name="Foo"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <label
      checked={false}
      className="c3 c4"
      disabled={false}
      htmlFor="checkbox-button-0"
    >
      Foo
    </label>
  </div>
  <div
    className="c1"
  >
    <input
      checked={false}
      className="c2"
      disabled={false}
      id="checkbox-button-1"
      name="Bar"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <label
      checked={false}
      className="c3 c4"
      disabled={false}
      htmlFor="checkbox-button-1"
    >
      Bar
    </label>
  </div>
  <div
    className="c1"
  >
    <input
      checked={false}
      className="c2"
      disabled={false}
      id="checkbox-button-2"
      name="Baz"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <label
      checked={false}
      className="c3 c4"
      disabled={false}
      htmlFor="checkbox-button-2"
    >
      Baz
    </label>
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot with <CheckboxGroup.Button /> and icons 1`] = `
.c4 {
  display: block;
  margin-bottom: 5px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16px;
  font-weight: bold;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 16px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #FFFFFF;
  border: 1.5px solid #1355d0;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #1355d0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4 *:nth-child(2) {
  margin-left: 5px;
}

.c6:focus ~ .c3 {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c6:hover ~ .c3 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c6:active ~ .c3 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c7:focus ~ .c3 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
  background-color: #ffe5e9;
  border-color: #ff2d4d;
  color: #ff2d4d;
}

.c7:hover ~ .c3 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
  background-color: #ffe5e9;
  border-color: #ff2d4d;
  color: #ff2d4d;
}

.c7:active ~ .c3 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
  background-color: #ffe5e9;
  border-color: #ff2d4d;
  color: #ff2d4d;
}

.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2:focus ~ .c3 {
  box-shadow: 0 2px 4px 0 rgba(19,85,208,0.5);
  background-color: #FFFFFF;
  border-color: #1355d0;
  color: #1355d0;
}

.c2:hover ~ .c3 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c2:active ~ .c3 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c8:focus ~ .c3 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
  background-color: #ffe5e9;
  border-color: #ff2d4d;
  color: #ff2d4d;
}

.c8:hover ~ .c3 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
  background-color: #ffe5e9;
  border-color: #ff2d4d;
  color: #ff2d4d;
}

.c8:active ~ .c3 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
  background-color: #ffe5e9;
  border-color: #ff2d4d;
  color: #ff2d4d;
}

.c5 {
  margin-right: 8px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c1 .c9 {
  font-size: 17px;
  margin-left: 8px;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <input
      checked={false}
      className="c2"
      disabled={false}
      id="checkbox-button-18"
      name="Foo"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <label
      checked={false}
      className="c3 c4"
      disabled={false}
      htmlFor="checkbox-button-18"
    >
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c5"
        style={
          Object {
            "color": "",
          }
        }
      >
        print
      </span>
      Foo
    </label>
  </div>
  <div
    className="c1"
  >
    <input
      checked={false}
      className="c2"
      disabled={false}
      id="checkbox-button-19"
      name="Bar"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <label
      checked={false}
      className="c3 c4"
      disabled={false}
      htmlFor="checkbox-button-19"
    >
      Bar
    </label>
  </div>
  <div
    className="c1"
  >
    <input
      checked={false}
      className="c2"
      disabled={false}
      id="checkbox-button-20"
      name="Baz"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <label
      checked={false}
      className="c3 c4"
      disabled={false}
      htmlFor="checkbox-button-20"
    >
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c5"
        style={
          Object {
            "color": "",
          }
        }
      >
        face
      </span>
      Baz
    </label>
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot with <CheckboxGroup.Button /> with an error 1`] = `
.c4 {
  display: block;
  margin-bottom: 5px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16px;
  font-weight: bold;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 16px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #FFFFFF;
  border: 1.5px solid #1355d0;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #1355d0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: #ff2d4d;
  border-color: #ff2d4d;
}

.c4 *:nth-child(2) {
  margin-left: 5px;
}

.c6:focus ~ .c3 {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c6:hover ~ .c3 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c6:active ~ .c3 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c7:focus ~ .c3 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
  background-color: #ffe5e9;
  border-color: #ff2d4d;
  color: #ff2d4d;
}

.c7:hover ~ .c3 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
  background-color: #ffe5e9;
  border-color: #ff2d4d;
  color: #ff2d4d;
}

.c7:active ~ .c3 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
  background-color: #ffe5e9;
  border-color: #ff2d4d;
  color: #ff2d4d;
}

.c8:focus ~ .c3 {
  box-shadow: 0 2px 4px 0 rgba(19,85,208,0.5);
  background-color: #FFFFFF;
  border-color: #1355d0;
  color: #1355d0;
}

.c8:hover ~ .c3 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c8:active ~ .c3 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2:focus ~ .c3 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
  background-color: #ffe5e9;
  border-color: #ff2d4d;
  color: #ff2d4d;
}

.c2:hover ~ .c3 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
  background-color: #ffe5e9;
  border-color: #ff2d4d;
  color: #ff2d4d;
}

.c2:active ~ .c3 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
  background-color: #ffe5e9;
  border-color: #ff2d4d;
  color: #ff2d4d;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c1 .c9 {
  font-size: 17px;
  margin-left: 8px;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

.c5 {
  color: #ac001a;
  font-size: 14px;
  cursor: text;
  font-style: italic;
  font-weight: 600;
  margin-left: -3px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <input
      checked={false}
      className="c2"
      disabled={false}
      id="checkbox-button-6"
      name="Foo"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <label
      checked={false}
      className="c3 c4"
      disabled={false}
      htmlFor="checkbox-button-6"
    >
      Foo
    </label>
  </div>
  <div
    className="c1"
  >
    <input
      checked={false}
      className="c2"
      disabled={false}
      id="checkbox-button-7"
      name="Bar"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <label
      checked={false}
      className="c3 c4"
      disabled={false}
      htmlFor="checkbox-button-7"
    >
      Bar
    </label>
  </div>
  <div
    className="c1"
  >
    <input
      checked={false}
      className="c2"
      disabled={false}
      id="checkbox-button-8"
      name="Baz"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <label
      checked={false}
      className="c3 c4"
      disabled={false}
      htmlFor="checkbox-button-8"
    >
      Baz
    </label>
  </div>
  <div
    className="c5"
  >
    Error Message
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot with <CheckboxGroup.Button /> with disabled options 1`] = `
.c7 {
  display: block;
  margin-bottom: 5px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16px;
  font-weight: bold;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 16px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #FFFFFF;
  border: 1.5px solid #1355d0;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #1355d0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c7 *:nth-child(2) {
  margin-left: 5px;
}

.c4 {
  display: block;
  margin-bottom: 5px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16px;
  font-weight: bold;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 16px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: rgba(204,204,204,0.4);
  border: 1.5px solid #999999;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #999999;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4 *:nth-child(2) {
  margin-left: 5px;
}

.c8 {
  display: block;
  margin-bottom: 5px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16px;
  font-weight: bold;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 16px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #999999;
  border: 1.5px solid #999999;
  box-shadow: 0 2px 4px 0 #cccccc;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-radius: 4px;
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c8 *:nth-child(2) {
  margin-left: 5px;
}

.c9:focus ~ .c3 {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c9:hover ~ .c3 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c9:active ~ .c3 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c10:focus ~ .c3 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
  background-color: #ffe5e9;
  border-color: #ff2d4d;
  color: #ff2d4d;
}

.c10:hover ~ .c3 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
  background-color: #ffe5e9;
  border-color: #ff2d4d;
  color: #ff2d4d;
}

.c10:active ~ .c3 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
  background-color: #ffe5e9;
  border-color: #ff2d4d;
  color: #ff2d4d;
}

.c6 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c6:focus ~ .c3 {
  box-shadow: 0 2px 4px 0 rgba(19,85,208,0.5);
  background-color: #FFFFFF;
  border-color: #1355d0;
  color: #1355d0;
}

.c6:hover ~ .c3 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c6:active ~ .c3 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #e5edfc;
  border-color: #1355d0;
  color: #1355d0;
}

.c11:focus ~ .c3 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
  background-color: #ffe5e9;
  border-color: #ff2d4d;
  color: #ff2d4d;
}

.c11:hover ~ .c3 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
  background-color: #ffe5e9;
  border-color: #ff2d4d;
  color: #ff2d4d;
}

.c11:active ~ .c3 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
  background-color: #ffe5e9;
  border-color: #ff2d4d;
  color: #ff2d4d;
}

.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c1 .c5 {
  font-size: 17px;
  margin-left: 8px;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <input
      checked={false}
      className="c2"
      disabled={true}
      id="checkbox-button-9"
      name="Foo"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <label
      checked={false}
      className="c3 c4"
      disabled={true}
      htmlFor="checkbox-button-9"
    >
      Foo
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c5 "
        style={
          Object {
            "color": "",
          }
        }
      >
        lock
      </span>
    </label>
  </div>
  <div
    className="c1"
  >
    <input
      checked={false}
      className="c6"
      disabled={false}
      id="checkbox-button-10"
      name="Bar"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <label
      checked={false}
      className="c3 c7"
      disabled={false}
      htmlFor="checkbox-button-10"
    >
      Bar
    </label>
  </div>
  <div
    className="c1"
  >
    <input
      checked={true}
      className="c2"
      disabled={true}
      id="checkbox-button-11"
      name="Baz"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <label
      checked={true}
      className="c3 c8"
      disabled={true}
      htmlFor="checkbox-button-11"
    >
      Baz
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c5 "
        style={
          Object {
            "color": "",
          }
        }
      >
        lock
      </span>
    </label>
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot with <CheckboxGroup.Checkbox /> with an error 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c5 {
  display: block;
  margin-bottom: 5px;
  color: #4c4c4c;
  font-size: 16px;
  margin: 0 0 0 10px;
}

.c7 + .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 2px;
  border: 2px solid #999999;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16px;
  font-weight: bold;
  height: 18px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 2px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 18px;
}

.c7:checked + .c3 {
  background-color: #1355d0;
  border-width: 0;
  color: #FFFFFF;
}

.c7:hover + .c3,
.c7:focus + .c3 {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c7[disabled] ~ .c4 {
  color: #999999;
}

.c7[disabled] + .c3 {
  border-color: #999999;
  background-color: #cccccc;
}

.c7[disabled]:checked + .c3 {
  background-color: #999999;
}

.c7[disabled]:hover + .c3 {
  box-shadow: none;
}

.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2:focus ~ .c8 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
  background-color: #ffe5e9;
  border-color: #ff2d4d;
  color: #ff2d4d;
}

.c2:hover ~ .c8 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
  background-color: #ffe5e9;
  border-color: #ff2d4d;
  color: #ff2d4d;
}

.c2:active ~ .c8 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
  background-color: #ffe5e9;
  border-color: #ff2d4d;
  color: #ff2d4d;
}

.c2 + .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 2px;
  border: 2px solid #999999;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16px;
  font-weight: bold;
  height: 18px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 2px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 18px;
}

.c2:checked + .c3 {
  background-color: #1355d0;
  border-width: 0;
  color: #FFFFFF;
}

.c2:hover + .c3,
.c2:focus + .c3 {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c2 + .c3 {
  border-color: #ff2d4d;
}

.c2:checked + .c3 {
  background-color: #ff2d4d;
}

.c2:hover + .c3,
.c2:focus + .c3 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
}

.c2[disabled] {
  cursor: not-allowed;
}

.c2[disabled] ~ .c4 {
  color: #999999;
}

.c2[disabled] + .c3 {
  border-color: #999999;
  background-color: #cccccc;
}

.c2[disabled]:checked + .c3 {
  background-color: #999999;
}

.c2[disabled]:hover + .c3 {
  box-shadow: none;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

.c6 {
  color: #ac001a;
  font-size: 14px;
  cursor: text;
  font-style: italic;
  font-weight: 600;
  margin-left: -3px;
}

<div
  className="c0"
>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="c2"
        disabled={false}
        id=""
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        check
      </span>
      <label
        className="c4 c5"
        htmlFor=""
      >
        Foo
      </label>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="c2"
        disabled={false}
        id=""
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        check
      </span>
      <label
        className="c4 c5"
        htmlFor=""
      >
        Bar
      </label>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="c2"
        disabled={false}
        id=""
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        check
      </span>
      <label
        className="c4 c5"
        htmlFor=""
      >
        Baz
      </label>
    </div>
  </div>
  <div
    className="c6"
  >
    Error Message
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot with <CheckboxGroup.Checkbox /> with disabled options 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c5 {
  display: block;
  margin-bottom: 5px;
  color: #4c4c4c;
  font-size: 16px;
  margin: 0 0 0 10px;
}

.c6 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c6:focus ~ .c8 {
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
  background-color: #1355d0;
  border-color: #1355d0;
  color: #FFFFFF;
}

.c6:hover ~ .c8 {
  box-shadow: 0 2px 4px 0 #cccccc;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c6:active ~ .c8 {
  box-shadow: 0 2px 4px 0 #4c4c4c;
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

.c6 + .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 2px;
  border: 2px solid #999999;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16px;
  font-weight: bold;
  height: 18px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 2px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 18px;
}

.c6:checked + .c3 {
  background-color: #1355d0;
  border-width: 0;
  color: #FFFFFF;
}

.c6:hover + .c3,
.c6:focus + .c3 {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c6[disabled] {
  cursor: not-allowed;
}

.c6[disabled] ~ .c4 {
  color: #999999;
}

.c6[disabled] + .c3 {
  border-color: #999999;
  background-color: #cccccc;
}

.c6[disabled]:checked + .c3 {
  background-color: #999999;
}

.c6[disabled]:hover + .c3 {
  box-shadow: none;
}

.c7 + .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 2px;
  border: 2px solid #999999;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16px;
  font-weight: bold;
  height: 18px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 2px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 18px;
}

.c7:checked + .c3 {
  background-color: #1355d0;
  border-width: 0;
  color: #FFFFFF;
}

.c7:hover + .c3,
.c7:focus + .c3 {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c7 + .c3 {
  border-color: #ff2d4d;
}

.c7:checked + .c3 {
  background-color: #ff2d4d;
}

.c7:hover + .c3,
.c7:focus + .c3 {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
}

.c7[disabled] ~ .c4 {
  color: #999999;
}

.c7[disabled] + .c3 {
  border-color: #999999;
  background-color: #cccccc;
}

.c7[disabled]:checked + .c3 {
  background-color: #999999;
}

.c7[disabled]:hover + .c3 {
  box-shadow: none;
}

.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2 + .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 2px;
  border: 2px solid #999999;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 16px;
  font-weight: bold;
  height: 18px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 2px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 18px;
}

.c2:checked + .c3 {
  background-color: #1355d0;
  border-width: 0;
  color: #FFFFFF;
}

.c2:hover + .c3,
.c2:focus + .c3 {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c2[disabled] {
  cursor: not-allowed;
}

.c2[disabled] ~ .c4 {
  color: #999999;
}

.c2[disabled] + .c3 {
  border-color: #999999;
  background-color: #cccccc;
}

.c2[disabled]:checked + .c3 {
  background-color: #999999;
}

.c2[disabled]:hover + .c3 {
  box-shadow: none;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="c0"
>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="c2"
        disabled={true}
        id=""
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        check
      </span>
      <label
        className="c4 c5"
        htmlFor=""
      >
        Foo
      </label>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="c6"
        disabled={false}
        id=""
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        check
      </span>
      <label
        className="c4 c5"
        htmlFor=""
      >
        Bar
      </label>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={true}
        className="c2"
        disabled={true}
        id=""
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        check
      </span>
      <label
        className="c4 c5"
        htmlFor=""
      >
        Baz
      </label>
    </div>
  </div>
</div>
`;
